k8s/service.yml
apiVersion: "v1"
kind: "Service"
metadata:
  name: "krema-server-service"
  namespace: "krema"
spec:
  sessionAffinity: "None"
  type: "NodePort"
  selector:
    app: "krema-server-pod"
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 8000
