k8s/ingress.yml
apiVersion: "networking.k8s.io/v1beta1"
kind: "Ingress"
metadata:
  name: "krema-server-ingress"
  namespace: "krema"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
spec:
  rules:
    - host: "api.krema.digitalkds.co.kr"
      http:
        paths:
          - path: "/"
            backend:
              serviceName: "krema-server-service"
              servicePort: 80
